<resources>
    <string name="app_name" translatable="false">Movie Quiz</string>
    <string name="score">SCORE: %1$d</string>
    <string name="round">ROUND: %1$d</string>
    <string name="hi_score">HI-SCORE: %1$d</string>
    <string name="game_over">Game Over</string>
    <string name="movies">Movies</string>
    <string name="people">People</string>
    <string name="about" translatable="false">About</string>
    <string name="tap_to_restart">Tap anywhere to restart</string>
    <string name="tmdb_notice" translatable="false">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
    <string name="author_name" translatable="false">Sebastian Klikowicz</string>
    <string name="author_email" translatable="false">kliqkliq@gmail.com</string>
    <string name="tv">TV Shows</string>
</resources>
